--- a/AdminWindows/AddingNewCourier.xaml
+++ b/AdminWindows/AddingNewCourier.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="CourierServiceWpfApp.AddingNewCourier"
+﻿<Window x:Class="CourierServiceWpfApp.AdminWindows.AddingNewCourier"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CourierServiceWpfApp"
+        xmlns:local="clr-namespace:CourierServiceWpfApp.AdminWindows"
         mc:Ignorable="d"
         Title="Добавление курьера" Height="323" Width="451" ResizeMode="NoResize">
     <Grid>
