--- a/UserWindow.xaml
+++ b/UserWindow.xaml
@@ -5,74 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CourierServiceWpfApp"
         mc:Ignorable="d"
-        Title="Окно для оформления заказов" Height="393" Width="755" ResizeMode="NoResize">
+        Title="Окно для оформления заказов" Height="750" Width="1400" ResizeMode="NoResize">
     <Grid>
-        <TabControl HorizontalAlignment="Left" Width="438" Height="357" VerticalAlignment="Center">
-            <TabItem Header="Оформление заказа" FontSize="14">
+        <TabControl>
+            <TabItem Header="Оформление заказа" FontSize="16">
                 <Grid Background="#FFE5E5E5">
-                    <Button Name="SetStartLocationButton" Content="Выбрать местоположение" HorizontalAlignment="Left" Margin="83,35,0,0" VerticalAlignment="Top" Click="SetStartLocationButton_Click" Width="206"/>
-                    <Button Name="SetEndLocationButton" Content="Выбрать местоположение" HorizontalAlignment="Left" Margin="83,71,0,0" VerticalAlignment="Top" Click="SetEndLocationButton_Click" Width="206"/>
-                    <Label Content="Откуда:" HorizontalAlignment="Left" Margin="17,32,0,0" VerticalAlignment="Top"/>
-                    <Label Content="Куда:" HorizontalAlignment="Left" Margin="17,68,0,0" VerticalAlignment="Top"/>
-                    <Label Content="Вес (г):" HorizontalAlignment="Left" Margin="17,104,0,0" VerticalAlignment="Top"/>
-                    <TextBox Name="WeightTextBox" HorizontalAlignment="Left" Margin="83,108,0,0" TextWrapping="Wrap" 
-                             VerticalAlignment="Top" Width="120" MaxLines="1"/>
-                    <Label Content="Габариты (мм):" HorizontalAlignment="Left" Margin="17,140,0,0" VerticalAlignment="Top"/>
-                    <TextBox Name="HeightTextBox" HorizontalAlignment="Left" Margin="25,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" 
-                             Width="67" MaxLines="1"/>
-                    <TextBox Name="WidthTextBox" HorizontalAlignment="Left" Margin="97,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" 
-                             Width="67" MaxLines="1"/>
-                    <TextBox Name="LengthTextBox" HorizontalAlignment="Left" Margin="169,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" 
-                             Width="67" MaxLines="1"/>
+                    <Button Name="SetStartLocationButton" Content="Выбрать местоположение" HorizontalAlignment="Left" Margin="114,73,0,0" VerticalAlignment="Top" Click="SetStartLocationButton_Click"/>
+                    <Button Name="SetEndLocationButton" Content="Выбрать местоположение" HorizontalAlignment="Left" Margin="114,109,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Откуда:" HorizontalAlignment="Left" Margin="48,70,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Куда:" HorizontalAlignment="Left" Margin="48,106,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Вес (г):" HorizontalAlignment="Left" Margin="48,142,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="WeightTextBox" HorizontalAlignment="Left" Margin="114,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" KeyDown="NumberTextBox_KeyDown" MaxLines="1"/>
+                    <Label Content="Габариты (мм):" HorizontalAlignment="Left" Margin="48,178,0,0" VerticalAlignment="Top"/>
+                    <TextBox HorizontalAlignment="Left" Margin="56,214,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="67" KeyDown="NumberTextBox_KeyDown" MaxLines="1"/>
+                    <TextBox HorizontalAlignment="Left" Margin="128,214,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="67" KeyDown="NumberTextBox_KeyDown" MaxLines="1"/>
+                    <TextBox HorizontalAlignment="Left" Margin="200,214,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="67" KeyDown="NumberTextBox_KeyDown" MaxLines="1"/>
                     <StackPanel/>
-                    <Button Content="Заказать" HorizontalAlignment="Left" Margin="25,217,0,0" VerticalAlignment="Top" Width="379" Height="40" Click="OrderButton_Click"/>
-                    <TextBox Name="StartLocationXTextBox" HorizontalAlignment="Left" Margin="299,36,0,0" MaxLines="1" 
-                             TextWrapping="Wrap" VerticalAlignment="Top" Width="50" IsEnabled="False"/>
-                    <TextBox Name="StartLocationYTextBox" HorizontalAlignment="Left" Margin="354,36,0,0" MaxLines="1" 
-                             TextWrapping="Wrap" VerticalAlignment="Top" Width="50" IsEnabled="False"/>
-                    <TextBox Name="EndLocationXTextBox" HorizontalAlignment="Left" Margin="299,72,0,0" MaxLines="1" 
-                             TextWrapping="Wrap" VerticalAlignment="Top" Width="50" IsEnabled="False"/>
-                    <TextBox Name="EndLocationYTextBox" HorizontalAlignment="Left" Margin="354,72,0,0" MaxLines="1" 
-                             TextWrapping="Wrap" VerticalAlignment="Top" Width="50" IsEnabled="False"/>
-                    <Label Content="Координаты" HorizontalAlignment="Left" Margin="299,10,0,0" HorizontalContentAlignment="Center" 
-                           VerticalAlignment="Top" Width="105" Padding="0,0,0,0"/>
+                    <Button Content="Заказать" HorizontalAlignment="Left" Margin="92,255,0,0" VerticalAlignment="Top" Width="140"/>
+                    <TextBox Name="StartLocationXTextBox" HorizontalAlignment="Left" Margin="330,74,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50" IsEnabled="False"/>
+                    <TextBox Name="StartLocationYTextBox" HorizontalAlignment="Left" Margin="385,74,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50" IsEnabled="False"/>
+                    <TextBox Name="EndLocationXTextBox" HorizontalAlignment="Left" Margin="330,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50" IsEnabled="False"/>
+                    <TextBox Name="EndLocationYTextBox" HorizontalAlignment="Left" Margin="385,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50" IsEnabled="False"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Список заказов" FontSize="14">
-                <Grid Background="#FFE5E5E5">
-                    <ScrollViewer>
-                        <StackPanel Name="OrdersStackPanel" CanVerticallyScroll="True"/>
-                    </ScrollViewer>
-                </Grid>
-            </TabItem>
-            <TabItem Name="AddingCourier" Header="Курьеры" FontSize="14">
-                <Grid>
-                    <ScrollViewer Background="#FFE5E5E5" Margin="0,0,0,77">
-                        <StackPanel Name="CouriersStackPanel" CanVerticallyScroll="True"/>
-                    </ScrollViewer>
-                    <Button Content="Добавить курьера" HorizontalAlignment="Center" Margin="0,275,0,0" VerticalAlignment="Top" Height="31" Width="146" FontSize="16" Click="AddCourierButton_Click"/>
-                </Grid>
-
+            <TabItem Header="Список заказов" FontSize="16">
+                <Grid Background="#FFE5E5E5"/>
             </TabItem>
         </TabControl>
-        <Label Content="ПРОФИЛЬ" HorizontalAlignment="Left" Margin="558,66,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
-        <Label Content="Имя:" HorizontalAlignment="Left" Margin="555,89,0,0" HorizontalContentAlignment="Right" VerticalAlignment="Top" FontSize="16"/>
-        <Label Content="Фамилия:" HorizontalAlignment="Left" Margin="520,112,0,0" HorizontalContentAlignment="Right" VerticalAlignment="Top" FontSize="16"/>
-        <Label Content="Логин:" HorizontalAlignment="Left" Margin="541,136,0,0" HorizontalContentAlignment="Right" VerticalAlignment="Top" FontSize="16"/>
-        <Label Content="Id:" HorizontalAlignment="Left" Margin="572,160,0,0" HorizontalContentAlignment="Right" VerticalAlignment="Top" FontSize="16"/>
-        <Label Name="NameLabel" Content="имя" HorizontalAlignment="Left" Margin="605,89,0,0" HorizontalContentAlignment="Left" VerticalAlignment="Top" FontSize="16"/>
-        <Label Name="SecNameLabel" Content="фамилия" HorizontalAlignment="Left" Margin="604,112,0,0" HorizontalContentAlignment="Left" VerticalAlignment="Top" FontSize="16"/>
-        <Label Name="LoginLabel" Content="логин" HorizontalAlignment="Left" Margin="604,136,0,0" HorizontalContentAlignment="Left" VerticalAlignment="Top" FontSize="16"/>
-        <Label Name="IdLabel" Content="id" HorizontalAlignment="Left" Margin="604,160,0,0" HorizontalContentAlignment="Left" VerticalAlignment="Top" FontSize="16"/>
-        <Button Content="Обновить" HorizontalAlignment="Left" Margin="443,26,0,0" Click="UpdateButton_Click" FontSize="16" Height="25" VerticalAlignment="Top"/>
-        <Button Content="Выйти из профиля" HorizontalAlignment="Left" Margin="534,191,0,0" VerticalAlignment="Top" FontSize="16" Click="UnSignButton_Click"/>
-        <Button Content="Удалить профиль" HorizontalAlignment="Left" Margin="534,221,0,0" VerticalAlignment="Top" FontSize="16" Click="DeleteUserButton_Click" Width="140"/>
-        <Grid Margin="499,246,46,10">
-            <Label Content="Время работы" FontSize="14"  HorizontalAlignment="Center" Margin="0,16,0,0" VerticalAlignment="Top" Height="27"/>
-            <TextBox Name="StartTimeWorkTextBox" HorizontalContentAlignment="Right" FontSize="14" Text="8" Margin="58,42,0,0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="45" IsEnabled="False"/>
-            <TextBox Name="EndTimeWorkTextBox" FontSize="14" Text="24" Margin="108,42,0,0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="45" IsEnabled="False"/>
-
-        </Grid>
-
     </Grid>
 </Window>
